still need dynamic classes change

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -131,8 +131,20 @@
   max-width:200px
 }
 
-.dateBox{
+.boxStyle{
   border: 2px solid red;
   padding: 10px;
-  border-radius: 50px 20px;
+  border-radius: 20px 0px;
+}
+
+.betTableNumber{
+  width: 24px;
+    text-align: center;
+    background-color: darkgray;
+    border-radius: 50%;
+}
+.betTotal{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
