--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -134,17 +134,21 @@
   }
 }
 .selectBet{
-  max-width:200px
+  max-width:200px;
 }
 
 .boxStyle{
-  border: 2px solid red;
+  border: 1px solid;
   padding: 10px;
   border-radius: 20px 0px;
 }
 
+.betTextBox{
+  border: 1px solid darkgray; 
+  border-radius: 20px 0px;
+}
 .betTableNumber{
-  width: 24px;
+    width: 24px;
     text-align: center;
     background-color: darkgray;
     border-radius: 50%;
@@ -155,14 +159,13 @@
     align-items: center;
 }
 .betTypePick{
-  /* background-color: red;
-  display: inline-block; */
-  /* width: 100px;
-  height: 100px; */
-  border: 1px solid red;
+  border: 1px solid #bf2262;
   border-radius: 20px 0px;
   max-width: 50px;
   padding: 20px;
+  font-weight: bold;
+  color: #bf2262;
+  margin: 0px 5px;
 }
 
 .datePick{
@@ -175,12 +178,15 @@
   cursor: pointer;
 }
 
-#checkboxes input[type=checkbox]{
+#checkboxes input[type=checkbox], #checkboxes input[type=radio]{
   display: none;
 }
-
+/* #checkboxes input[type=radio]{
+  display: none;
+} */
 #checkboxes input[type=checkbox]:checked + .betTypePick{
-  background-color: green;
+  background-color: #bf2262;
+  color: whitesmoke;
 }
 
 #checkboxes input[type=checkbox]:checked + .datePicked{
@@ -189,6 +195,13 @@
   border-color: #bf2262;
 }
 
-.gamesPicker img{
+#checkboxes input[type=checkbox]:checked + .gamesPicked{
+  border: 1px solid #bf2262;
+  filter: grayscale(0%)!important;
+  border-radius: 15px;
+}
+
+.gamesPicker label{
   margin: 0px 5px;
+  filter: grayscale(100%);
 }
