--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -188,6 +188,7 @@ footer.logo {
   border: 1px solid #bf2262;
   border-radius: 20px 0px;
   max-width: 50px;
+  height: 1rem;
   padding: 20px;
   font-weight: bold;
   color: #bf2262;
@@ -196,7 +197,7 @@ footer.logo {
 
 .datePick{
   border: 2px solid grey; 
-  padding: 30px;
+  padding: 15px;
   border-radius: 50px 0px;
   margin: 5px 5px;
 }
@@ -207,15 +208,13 @@ footer.logo {
 #checkboxes input[type=checkbox], #checkboxes input[type=radio]{
   display: none;
 }
-/* #checkboxes input[type=radio]{
-  display: none;
-} */
+
 #checkboxes input[type=checkbox]:checked + .betTypePick{
   background-color: #bf2262;
   color: whitesmoke;
 }
 
-#checkboxes input[type=checkbox]:checked + .datePicked{
+#checkboxes input[type=checkbox]:checked + .datePick{
   /* border-color: #bf2262 ; */
   color: #bf2262;
   border-color: #bf2262;
@@ -228,6 +227,6 @@ footer.logo {
 }
 
 .gamesPicker label{
-  margin: 0px 5px;
+  margin: 5px 5px;
   filter: grayscale(100%);
 }
