--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1757,3 +1757,11 @@
     }
     }
     
+    .errorBg{
+        background-image:url('/img/error/403_banner.jpg');
+        background-repeat:no-repeat;
+        height: 100vh;   
+        min-height: -moz-available;
+        min-height: -webkit-fill-available;
+        min-height: fill-available;
+      }
