--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1867,6 +1867,7 @@ span.outer-circle-gp.selected-gp-h5 span.inner-circle-gp img {
     #smallScreen span{
         font-size: 1rem!important;
     }
+}
 .errorBg {
     width: 100vw;
     text-align: center;
