--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -214,6 +214,10 @@
     font-size: 14px;
     text-transform: uppercase;
     }
+    .play-lottery-btn:hover {
+        color: #000;
+        box-shadow: 0px 8px 9px 0px rgb(0 0 0 / 27%);
+    }
     .dropdown .lanugae-selector .lang-flag {
     width: 25px;
     height: 25px;
@@ -298,6 +302,10 @@
     max-width: 386px;
     text-decoration: none;
     text-align: center;
+    }
+    .date-block a:hover {
+        color: #fff;
+        box-shadow: 0px 8px 9px 0px rgb(0 0 0 / 27%);
     }
     .sd-text-part h3 {
     font-family: "Poppins";
@@ -389,8 +397,7 @@
     .btn-yellow:hover {
         color: #000;
         background-color: rgb(255, 228, 0);
-        transform: translateY(-1px);
-        box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+        box-shadow: 0px 8px 9px 0px rgb(0 0 0 / 27%);
     }
     .rounded-full {
     border-radius: 30px;
