--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1542,6 +1542,17 @@
       .dropdown-item .lang-flag img {
         width: 15px;
       }
+      .carousel.carousel-slider .control-arrow {
+        top: 50% !important;
+        opacity: 1 !important;
+        height: 40px;
+        transform: translateY(-20px);
+        background: rgb(191 34 98) !important;
+        line-height: 30px;
+    }
+    .carousel-status {
+        display: none;
+    }
     @media (min-width: 576px) {
     .container-sm,
     .container {
