--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1751,7 +1751,7 @@
   border-radius: 10px 0;
   padding: 4px 10px;
   font-size: 13px;
-  width: 150px;
+  width: 100%;
   max-width: 100%;
   }
   .form-control-custom:focus,
