--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2594,9 +2594,14 @@ span.name-gp {
     font-size: 90px;
 }
 }
-@media (max-width:1200px) {
+@media (max-width:991px) and (min-width:795px) {
   .wb-text-part .slider-big-text {
       font-size: 60px;
+  }
+}
+@media (max-width:1200px) {
+  .wb-text-part .slider-big-text {
+      /* font-size: 60px; */
   }
   .wb-text-part p.text-white.fs-5 {
       font-size: 15px !important;
