--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2639,3 +2639,38 @@ span.name-gp {
       margin-bottom: 15px;
   }
 }
+.betTip{
+   position: 'absolute';
+                          display: block;
+                          white-space: nowrap;
+                          line-height: 1;
+                          text-align: center;
+                          top: -100%;
+                          background: #e32e7a;
+                          border: 1px solid #ddd;
+                          visibility: hidden;
+                          font-size: 12px;
+                          border-radius: 5px;
+                          color: white;
+                          padding: 10px 15px 10px 15px;
+                          position: absolute;
+}
+      @media (max-width:690px) {
+        .betTip{
+          padding: 2px;
+          top: -130%;
+          white-space: normal;
+
+
+      }
+      }
+.betTip::after{
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #e32e7a transparent transparent transparent;
+              }
