--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2704,3 +2704,6 @@ span.name-gp {
               input.form-control.text-right-for-amount {
                 text-align: right;
             } */
+            input.form-control.text-right-for-amount {
+              text-align: right;
+          }
