--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2750,3 +2750,25 @@ input.form-control.text-right-for-amount {
     padding: 1px 0;
   }
 }
+
+/* ---------- Pagination Css --------- */
+.pagination li a {
+  background:#efefef;
+  border-radius: 5px;
+  margin-right: 5px;
+  padding: 4px 10px;
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+}
+.pagination li a:hover {
+  background: #dc3545;
+  color: #fff !important;
+}
+.pagination li.selected a {
+  background: #dc3545;
+  color: #fff !important;
+}
+.pagination li:last-child a {
+  margin-right: 0;
+}
