--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2776,7 +2776,10 @@ input.form-control.text-right-for-amount {
 .forTuchPad .btn:focus-visible { 
   background-color: white !important; 
 }
-.forTuchPad .btn:first-child:hover, .forTuchPad :not(.btn-check)+.btn:hover {
-  color: #000 !important;
-  background-color: #fff !important;
+
+
+.forTuchPad .btn:first-child:hover, .forTuchPad :not(.btn-check)+.btn:hover { 
+  color: #000 !important; 
+  background-color: #fff !important; 
+  box-shadow: none !important; 
 }
