--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2818,3 +2818,14 @@ input.form-control.text-right-for-amount {
   background-color: #fff !important; 
   box-shadow: none !important; 
 }
+.curved-card .css-1s2u09g-control {
+  border-radius: 20px 0;
+  min-height: 45px;
+}
+.curved-card .css-1pahdxg-control:hover, .curved-card .css-1pahdxg-control:active, .curved-card .css-1pahdxg-control:focus-visible, .curved-card .css-1pahdxg-control:focus-within {
+  border-radius: 20px 0;
+  border-color: #bc2263 !important;
+  min-height: 45px;
+  outline: 0 !important;
+  box-shadow: none !important;
+}
