--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2862,3 +2862,22 @@ table.mob-table tr th, table.mob-table tr td {
 table.mob-table tr th:last-child, table.mob-table tr td:last-child {
   border-right: 0;
 }
+.loader-Mob-1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgb(255 255 255 / 90%);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  z-index: 1;
+} 
+.loader-Mob-2 {
+  position: relative;
+  z-index: 2;
+  left: 50%;
+  width: 50px;
+  transform: translateX(-25px);
+}
