--- a/public/assets/css/daterangepicker.css
+++ b/public/assets/css/daterangepicker.css
@@ -4,7 +4,7 @@
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #ddd;
-  width: 278px;
+  width: auto !important;
   max-width: none;
   padding: 0;
   margin-top: 7px;
@@ -336,6 +336,7 @@
 
 /*  Larger Screen Styling */
 @media (min-width: 564px) {
+
   .daterangepicker {
     width: auto;
   }
@@ -406,5 +407,10 @@
 
   .daterangepicker .drp-calendar.left {
     clear: none !important;
+  }
+}
+@media (max-width:554px) {
+  .daterangepicker {
+    width: auto;
   }
 }
