--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2946,15 +2946,15 @@ button.applyBtn.btn.btn-sm.btn-primary {
   }
   .daterangepicker .drp-calendar {
     float: left !important;
+    width: calc(100% - 80px);
   }
-  .daterangepicker .calendar-table th, .daterangepicker .calendar-table td {
-    width: 15px !important;
-    min-width: 15px !important;
-    font-size: 10px !important;
-    line-height: 15px !important;
+  .daterangepicker .drp-calendar.right {
+    float: none;
+    width: 100%;
+    max-width: 100%;
   }
 }
-@media (max-width:360px) {
+/* @media (max-width:360px) {
   .daterangepicker .ranges {
     float: left !important;
   }
@@ -2977,4 +2977,4 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .daterangepicker .drp-calendar.right {
   padding: 3px !important;
 }
-} 
+}  */
