--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3058,3 +3058,6 @@ button.applyBtn.btn.btn-sm.btn-primary {
 }
 }  */
 .marque-div ul li:last-child:after {display:none;}
+.marquee-container .marquee:last-child { 
+  display: none; 
+}
